# multitask

./: .dvcignore  .gitattributes  .gitignore  .lightning  .lightningignore  CITATION.cff  Dockerfile  LICENSE  README.md  data.dvc  dvc.yaml  generate_params.py  lightning_study.py  material_pricing.ipynb  params.yaml  pyproject.toml  requirements.txt  setup.py  solvent_vapor_pressures_cosmo.xlsx  test_lightning.py  units.txt  vapor_pressures.ipynb
.dvc/: config
data/: .gitignore  UtopiaStd-Regular.ttf.dvc  fey_ligand_database.xlsx.dvc  material_pricing.csv  solvent_vapor_pressures_cosmo.xlsx.dvc
data/baumgartner_C-N/: .gitignore  baumgartner_C-N.pb  baumgartner_C-N.pb.dvc  op9b00236_si_002.xlsx  warnings_baumgartner_C-N.json
figures/: .gitignore  baumgartner_mtbo_no_cat_loading.png.dvc  baumgartner_reizman_one_cotraining_optimization.png.dvc  baumgartner_reizman_one_cotraining_optimization.svg.dvc  baumgartner_reizman_one_cotraining_optimization_alternate.png.dvc  baumgartner_reizman_one_cotraining_optimization_alternate.svg.dvc  baumgertner_reizman_one_cotraining_optimization.png.dvc  comparison_plot.png.dvc  comparison_plot_twenty.png.dvc  descriptors_lkb_pca.png.dvc  perera_multi_task_descriptors.png.dvc  perera_single_task_descriptors.png.dvc  perera_suzuki_case_4_fey_descriptors.png.dvc  reizman_baumgartner_one_cotraining_optimization.png.dvc  reizman_baumgartner_one_cotraining_optimization.svg.dvc  reizman_reizman_one_cotraining_optimization.png.dvc
multitask/: __init__.py  app.py  cli.py  etl_baumgartner_C-N.py  etl_baumgartner_suzuki.py  etl_perera.py  etl_reizman_suzuki.py  figures.py  full_app.py  kinetic_models.py  kinetic_optimization.py  lightning_app.py  lightning_study.py  mixed_gp_regression.py  mt.py  multitask_demo.py  run_kinetic_optimization_mtbo.sh  run_kinetic_optimization_stbo.sh  suzuki_benchmark_optimization.py  suzuki_benchmark_training.py  suzuki_data_utils.py  suzuki_optimization.py  utils.py
nbs/: C-N coupling playground.ipynb  baumgartner_C-N v2.ipynb  baumgartner_C-N v3.ipynb  baumgartner_C-N.ipynb  baumgartner_ord_etl.ipynb  benchmark_training.ipynb  benchmarking.ipynb  bh_experiments.ipynb  case_1.yaml  case_2.yaml  case_2_old.yaml  case_3.yaml  create_training_data.ipynb  evaluation.ipynb  experiments.ipynb  kinetic_model.ipynb  kinetic_models.ipynb  material_pricing.ipynb  meta_analysis.ipynb  mixed_gp_regression.py  models.ipynb  multitask_paper_results.ipynb  neurips_paper_results.ipynb  paper_figures.ipynb  perera_multitask.ipynb  reproduce_multitask_bug.ipynb  solvent.ipynb  understand_gpyopt.ipynb  vapor_pressures.ipynb  visualize_kernel.ipynb
src/: dvc.yaml  etl_baumgartner_suzuki.py  utils.py
tests/: test_strategies.py
(+500 files in other folders)
