[tool.poetry]
name = "multitask"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
pint = "^0.17"
openpyxl = "^3.0.7"
ord-schema = "^0.3.0"
tqdm = "^4.61.0"
summit = "^0.8.6"
scikit-learn="1.0.2"
rdkit-pypi="^2021.9.4"
hiplot = "^0.1.32"
streamlit = "^1.9.2"
lightning = "^2022.8.17"
wandb = "^0.13.2"
fastapi = "^0.79.0"
# Temporary https://github.com/pytorch/botorch/issues/1370
gpytorch = "1.8.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"
black = "^22.3.0"
ipdb = "^0.13.9"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
