[tool.poetry]
name = "multitask"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10,<3.10"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
pint = "^0.17"
openpyxl = "^3.0.7"
ord-schema = "^0.3.25"
tqdm = "^4.61.0"
summit = "^0.8.7"
scikit-learn = "^1.0.2"
rdkit-pypi = "^2021.9.4"
hiplot = { version = "^0.1.32", optional = true }
streamlit = { version = "^1.9.2", optional = true }
wandb = "^0.13.2"
typer = "^0.6.1"
lightning = { version = "^2022.8.17", optional = true }
fastapi = { version = "^0.79.0", optional = true }

[tool.poetry.extras]
viz = ["hiplot", "streamlit"]
lightning = ["lightning", "fastapi"]

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"
black = "^22.3.0"
ipdb = "^0.13.9"
ipywidgets = "^7.7.0"

[tool.poetry.scripts]
multitask = "multitask.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
